2014-09-21  Saam Barati  <saambarati1@gmail.com>

        Web Inspector: fix TypeSet hierarchy in TypeTokenView
        https://bugs.webkit.org/show_bug.cgi?id=136982

        Reviewed by Joseph Pecoraro.

        The protocol object representation of TypeSet was being computed 
        incorrectly in JSC::TypeSet. This patch fixes that problem
        and also asserts that the type information that the Web Inspector
        receives is not empty.

        * UserInterface/Models/TypeSet.js:
        (WebInspector.TypeSet):
        * UserInterface/Views/TypeTokenView.js:
        (WebInspector.TypeTokenView.prototype._displayTypeName):

2014-09-21  Saam Barati  <saambarati1@gmail.com>

        Web Inspector: unlocalized 'many' string in type profiler inline bubble
        https://bugs.webkit.org/show_bug.cgi?id=136980

        Reviewed by Timothy Hatcher.

        Generate the localizable string for the type profiler's "many" inline bubble.

        * Localizations/en.lproj/localizedStrings.js:
        * UserInterface/Views/TypeTokenView.js:

2014-09-20  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Option+Click on CSS url(...) should jump to resource view
        https://bugs.webkit.org/show_bug.cgi?id=136965

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/CodeMirrorAdditions.js:
        When parsing CSS url(...) tokens, the contents of url(...)
        are a "string" type, not "atom".

2014-09-19  Daniel Bates  <dabates@apple.com>

        Always assume internal SDK when building configuration Production
        https://bugs.webkit.org/show_bug.cgi?id=136925
        <rdar://problem/18362399>

        Reviewed by Dan Bernstein.

        * Configurations/DebugRelease.xcconfig: Also move #include of HaveInternalSDK.xcconfig from DebugRelease.xcconfig
        to Base.xcconfig so as to be consistent with the format of other Base.xcconfig/DebugRelease.xcconfig files